--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -26,9 +26,9 @@ listing:
 - [x] If applicable, model artifacts have been documented.[^2]
 - [x] You are assigned a role with sufficient permissions to perform attestation tasks:[^3]
    - [{{< fa hand >}} Customer Admin]{.bubble} — Sets up attestations
-   - [Submitter]{.bubble} — Submits attestation questionnaires
-   - [Reviewer]{.bubble} — Reviews attestation questionnaires
-   - [Approver]{.bubble} — Approves attestation questionnaires
+   - [Submitter]{.bubble} — Stakeholder who submits attestation questionnaires
+   - [Reviewer]{.bubble} — Organizational role that reviews attestation questionnaires
+   - [Approver]{.bubble} — Organizational role that approves attestation questionnaires
 
 :::
 
