Use case compliance include

--- a/site/about/use-cases/e-23.qmd
+++ b/site/about/use-cases/e-23.qmd
@@ -3,11 +3,15 @@ title: "E-23"
 date: last-modified
 ---
 
+Implement E-23 Compliance using {{< var vm.product >}}.
+
+{{< include _use-case-summary.qmd >}}
+
+## Overview
+
 OSFI Guideline E-23 (Enterprise-Wide Model Risk Management for Deposit-Taking Institutions) contains the most comprehensive treatment of AI among major MRM regulations, reflecting the 2027 effective date and the anticipated evolution of AI. The guideline focuses on achieving specific outcomes rather than following prescribed processes.
 
 **Effective date:** May 1, 2027
-
-## Overview
 
 E-23 establishes expectations for federally regulated deposit-taking institutions in Canada to manage model risk effectively. It covers traditional MRM requirements while incorporating forward-looking considerations for AI and machine learning models.
 
