--- a/site/about/use-cases/eu-ai-act.qmd
+++ b/site/about/use-cases/eu-ai-act.qmd
@@ -3,17 +3,9 @@ title: "EU AI Act"
 date: last-modified
 ---
 
-This guide provides detailed, step-by-step guidance on implementing EU AI Act compliance using {{< var vm.product >}}. 
+Implement EU AI Act compliance using {{< var vm.product >}}.
 
-The documentation will:
-
-1. Walk you through the practical steps required to implement what is shown in the demo.
-
-2. Link to existing documentation for specific product features.
-
-3. Focus on actionable implementation rather than just explaining requirements.
-
-4. Link to training resources where relevant.
+{{< include _use-case-summary.qmd >}}
 
 ## Overview
 
