--- a/site/about/use-cases/sr-11-7.qmd
+++ b/site/about/use-cases/sr-11-7.qmd
@@ -3,9 +3,15 @@ title: "SR 11-7"
 date: last-modified
 ---
 
-SR 11-7 (Supervisory Guidance on Model Risk Management) was issued by the Board of Governors of the Federal Reserve System and the Office of the Comptroller of the Currency in 2011. It provides comprehensive guidance to financial institutions on developing and maintaining a robust model risk management framework.
+Implement SR 11-7 compliance using {{< var vm.product >}}.
+
+{{< include _use-case-summary.qmd >}}
+
 
 ## Overview
+
+SR 11-7 (Supervisory Guidance on Model Risk Management) was issued by the Board of Governors of the Federal Reserve System and the Office of the Comptroller of the Currency in 2011. It provides comprehensive guidance to financial institutions on developing and maintaining a robust model risk management framework.
+
 
 SR 11-7 establishes expectations across three main areas:
 
