--- a/site/about/use-cases/ss1-23.qmd
+++ b/site/about/use-cases/ss1-23.qmd
@@ -3,9 +3,13 @@ title: "SS1/23"
 date: last-modified
 ---
 
-SS1/23 (Model Risk Management Principles for Banks) was issued by the Prudential Regulation Authority (PRA) in the UK in May 2023. It establishes principles for managing model risk effectively, with emphasis on strategic planning and technical capabilities for emerging technologies like machine learning and AI.
+Implement SS1/23 compliance using {{< var vm.product >}}.
+
+{{< include _use-case-summary.qmd >}}
 
 ## Overview
+
+SS1/23 (Model Risk Management Principles for Banks) was issued by the Prudential Regulation Authority (PRA) in the UK in May 2023. It establishes principles for managing model risk effectively, with emphasis on strategic planning and technical capabilities for emerging technologies like machine learning and AI.
 
 SS1/23 is organized around five core principles:
 
