--- a/site/about/use-cases/sr-11-7.qmd
+++ b/site/about/use-cases/sr-11-7.qmd
@@ -7,13 +7,11 @@ Implement SR 11-7 compliance using {{< var vm.product >}}.
 
 {{< include _use-case-summary.qmd >}}
 
-
 ## Overview
 
-SR 11-7 (Supervisory Guidance on Model Risk Management) was issued by the Board of Governors of the Federal Reserve System and the Office of the Comptroller of the Currency in 2011. It provides comprehensive guidance to financial institutions on developing and maintaining a robust model risk management framework.
+SR 11-7 (Supervisory Guidance on Model Risk Management)[^1] provides comprehensive guidance to financial institutions on developing and maintaining a robust model risk management framework. By emphasizing the three lines of defense model and the concept of "effective challenge" — SR 11-7 ensures that models are rigorously questioned and tested.
 
-
-SR 11-7 establishes expectations across three main areas:
+This guide is organized around the expectations for the three main areas outlined in SR 11-7:
 
 1. Model development, implementation, and use
 
@@ -21,15 +19,11 @@ SR 11-7 establishes expectations across three main areas:
 
 3. Governance, policies, and controls
 
-The guidance emphasizes the three lines of defense model and the concept of "effective challenge" — ensuring models are rigorously questioned and tested.
-
-::: {.callout title="External resources"}
-[SR 11-7 on Federal Reserve website](https://www.federalreserve.gov/supervisionreg/srletters/sr1107.htm)
-:::
-
 ## 1. Model inventory setup
 
-**Purpose:** Establish a comprehensive model inventory aligned to SR 11-7 requirements.
+#### Purpose
+
+Establish a comprehensive model inventory aligned to SR 11-7 requirements.
 
 ### Steps
 
@@ -39,13 +33,13 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
    - Document inclusion and exclusion criteria.
    - Classify models by type and purpose.
 
-2. Configure inventory fields:[^1][^2]
+2. Configure inventory fields:[^2]
 
    - Set up materiality and tiering fields.
    - Add fields for model purpose and business use.
    - Configure risk rating classifications.
 
-3. Populate the inventory:
+3. Populate the inventory:[^3]
 
    - Register existing models.
    - Document model ownership and stakeholders.
@@ -53,16 +47,18 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ## 2. Model development documentation
 
-**Purpose:** Document models according to SR 11-7 development standards.
+#### Purpose
+
+Document models according to SR 11-7 development standards.
 
 ### Steps
 
-1. Configure documentation templates:[^3]
+1. Configure documentation templates:[^4]
 
    - Select or create templates aligned to SR 11-7.
    - Include sections for purpose, design, theory, and logic.
 
-2. Document purpose, design, theory, and logic:[^4]
+2. Document purpose, design, theory, and logic:[^5]
 
    - Clearly state the model's intended use.
    - Document the theoretical basis.
@@ -82,11 +78,13 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ## 3. Testing and outcomes analysis
 
-**Purpose:** Test models for accuracy, robustness, and stability per SR 11-7 requirements.
+#### Purpose
+
+Test models for accuracy, robustness, and stability per SR 11-7 requirements.
 
 ### Steps
 
-1. Run automated testing:[^5]
+1. Run automated testing using the {{< var validmind.developer >}}:[^6]
 
    - Execute accuracy tests.
    - Run robustness and stability tests.
@@ -106,7 +104,9 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ## 4. Independent validation (effective challenge)
 
-**Purpose:** Implement independent validation aligned to SR 11-7's "effective challenge" concept.
+#### Purpose
+
+Implement independent validation aligned to SR 11-7's "effective challenge" concept.
 
 ### Steps
 
@@ -116,13 +116,13 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
    - Define validation scope and requirements.
    - Establish independence requirements.
 
-2. Prepare validation reports:[^6]
+2. Prepare validation reports:[^7]
 
    - Use validation report templates.
    - Document validation activities.
    - Summarize findings and conclusions.
 
-3. Track findings and remediation:[^7]
+3. Track findings and remediation:[^8]
 
    - Document validation findings.
    - Assign remediation owners.
@@ -130,23 +130,25 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ## 5. Ongoing monitoring and periodic review
 
-**Purpose:** Implement ongoing monitoring per SR 11-7 requirements.
+#### Purpose
+
+Implement ongoing monitoring per SR 11-7 requirements.
 
 ### Steps
 
-1. Set up monitoring workflows[^8]
+1. Set up monitoring workflows:[^9]
 
    - Configure monitoring frequency.
    - Define monitoring metrics.
    - Establish escalation procedures.
 
-2. Configure performance tracking and alerts
+2. Configure performance tracking and alerts:
 
    - Set up performance dashboards.
    - Configure threshold-based alerts.
    - Document alert response procedures.
 
-3. Schedule periodic reviews[^9]
+3. Schedule periodic reviews:[^10]
 
    - Establish review frequency by model tier.
    - Configure review reminders.
@@ -154,23 +156,25 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ## 6. Governance, policies, and controls
 
-**Purpose:** Establish governance framework aligned to SR 11-7.
+#### Purpose
+
+Establish governance framework aligned to SR 11-7.
 
 ### Steps
 
-1. Configure role-based access[^10]
+1. Configure role-based access:[^11]
 
    - Set up roles for three lines of defense.
    - Configure permissions by role.
    - Ensure appropriate segregation of duties.
 
-2. Configure approval workflows[^9]
+2. Configure approval workflows:[^12]
 
    - Set up model approval processes.
    - Define approval authorities.
    - Configure escalation paths.
 
-3. Enable audit trail and compliance reporting[^11]
+3. Enable audit trail and compliance reporting:[^12]
 
    - Configure activity logging.
    - Set up compliance dashboards.
@@ -178,35 +182,42 @@ The guidance emphasizes the three lines of defense model and the concept of "eff
 
 ## Implementation checklist
 
-- [ ] Model definition criteria established
-- [ ] Model inventory configured and populated
-- [ ] Documentation templates aligned to SR 11-7
-- [ ] Testing framework implemented
-- [ ] Validation workflows configured
-- [ ] Ongoing monitoring established
-- [ ] Three lines of defense roles configured
-- [ ] Approval workflows in place
-- [ ] Audit trail enabled
+- [x] Model definition criteria established
+- [x] Model inventory configured and populated
+- [x] Documentation templates aligned to SR 11-7
+- [x] Testing framework implemented
+- [x] Validation workflows configured
+- [x] Ongoing monitoring established
+- [x] Three lines of defense roles configured
+- [x] Approval workflows in place
+- [x] Audit trail enabled
+
 
 <!-- FOOTNOTES -->
-[^1]: [Work with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
+
+[^1]:
+
+   **Board of Governors of the Federal Reserve System:**<br>
+   [SR 11-7](https://www.federalreserve.gov/supervisionreg/srletters/sr1107.htm)
 
 [^2]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
 
-[^3]: [Work with document templates](/guide/templates/working-with-document-templates.qmd)
+[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
 
-[^4]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+[^4]: [Working with document templates](/guide/templates/working-with-document-templates.qmd)
 
-[^5]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
+[^5]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
-[^6]: [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+[^6]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
 
-[^7]: [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
+[^7]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
 
-[^8]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+[^8]: [Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)
 
-[^9]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
+[^9]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 
-[^10]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^10]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
 
-[^11]: [Work with analytics](/guide/reporting/working-with-analytics.qmd)
+[^11]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^12]: [Working with analytics](/guide/reporting/working-with-analytics.qmd)
