--- a/site/about/use-cases/eu-ai-act.qmd
+++ b/site/about/use-cases/eu-ai-act.qmd
@@ -225,7 +225,7 @@ Integrate all components into a complete compliance workflow addressing Articles
 
 [^2]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
 
-[^3]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
+[^3]: [Setting up workflows](/guide/workflows/setting-up-workflows.qmd)
 
 [^4]: [Install and initialize the {{< var validmind.developer >}}](/developer/model-documentation/install-and-initialize-validmind-library.qmd)
 
@@ -248,7 +248,7 @@ Integrate all components into a complete compliance workflow addressing Articles
 
 [^13]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 
-[^14]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
+[^14]: [Setting up workflows](/guide/workflows/setting-up-workflows.qmd)
 
 [^15]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
