--- a/site/about/use-cases/sr-11-7.qmd
+++ b/site/about/use-cases/sr-11-7.qmd
@@ -198,7 +198,7 @@ Establish governance framework aligned to SR 11-7.
 [^1]:
 
    **Board of Governors of the Federal Reserve System:**<br>
-   [SR 11-7](https://www.federalreserve.gov/supervisionreg/srletters/sr1107.htm)
+   [SR 11-7: Guidance on Model Risk Management](https://www.federalreserve.gov/supervisionreg/srletters/sr1107.htm)
 
 [^2]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
 
@@ -216,7 +216,7 @@ Establish governance framework aligned to SR 11-7.
 
 [^9]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 
-[^10]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
+[^10]: [Setting up workflows](/guide/workflows/setting-up-workflows.qmd)
 
 [^11]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
