--- a/site/about/use-cases/ss1-23.qmd
+++ b/site/about/use-cases/ss1-23.qmd
@@ -9,9 +9,9 @@ Implement SS1/23 compliance using {{< var vm.product >}}.
 
 ## Overview
 
-SS1/23 (Model Risk Management Principles for Banks) was issued by the Prudential Regulation Authority (PRA) in the UK in May 2023. It establishes principles for managing model risk effectively, with emphasis on strategic planning and technical capabilities for emerging technologies like machine learning and AI.
+SS1/23 (Model Risk Management Principles for Banks)[^1] establishes principles for managing model risk effectively, with emphasis on strategic planning and technical capabilities for emerging technologies like machine learning and AI. By emphasizing **proportionate application**, SS1/23 ensures that implementation reflects institutional size and complexity.
 
-SS1/23 is organized around five core principles:
+This guide is organized around the expectations for the five core principles outlined in SS1/23:
 
 1. Model identification and model risk classification
 
@@ -23,15 +23,11 @@ SS1/23 is organized around five core principles:
 
 5. Model risk mitigants
 
-The regulation encourages **proportionate application** based on the size and complexity of the institution.
-
-::: {.callout title="External resources"}
-[SS1/23 on Bank of England website](https://www.bankofengland.co.uk/prudential-regulation/publication/2023/may/model-risk-management-principles-for-banks-ss)
-:::
-
 ## 1. Model identification and risk classification (Principle 1)
 
-**Purpose:** Establish a structured approach to identify and categorize models within the MRM framework.
+#### Purpose
+
+Establish a structured approach to identify and categorize models within the MRM framework.
 
 ### Steps
 
@@ -41,13 +37,13 @@ The regulation encourages **proportionate application** based on the size and co
    - Establish criteria for inclusion in the MRM framework.
    - Consider edge cases (spreadsheets, vendor models, etc.).
 
-2. Configure risk classification and tiering fields:[^1]
+2. Configure risk classification and tiering fields:[^2]
 
    - Set up model tier fields (e.g., Tier 1, 2, 3).
    - Add risk classification categories.
    - Configure validation based on tier.
 
-3. Document materiality and complexity factors:[^2]
+3. Document materiality and complexity factors:[^3]
 
    - Establish materiality thresholds.
    - Document complexity assessment criteria.
@@ -55,7 +51,9 @@ The regulation encourages **proportionate application** based on the size and co
 
 ## 2. Governance (Principle 2)
 
-**Purpose:** Establish structured oversight with clear responsibilities and authorities.
+#### Purpose
+
+Establish structured oversight with clear responsibilities and authorities.
 
 ### Steps
 
@@ -65,13 +63,13 @@ The regulation encourages **proportionate application** based on the size and co
    - Configure approval authorities.
    - Establish escalation paths to senior management.
 
-2. Configure roles and responsibilities:[^3]
+2. Configure roles and responsibilities:[^4]
 
    - Define roles across three lines of defense.
    - Document responsibilities for each role.
    - Configure permissions accordingly.
 
-3. Set up board oversight dashboards:[^4][^5]
+3. Set up board oversight dashboards:[^5]
 
    - Create executive-level dashboards.
    - Configure key risk indicators.
@@ -79,7 +77,9 @@ The regulation encourages **proportionate application** based on the size and co
 
 ## 3. Model development, implementation, and use (Principle 3)
 
-**Purpose:** Ensure models are developed and used per MRM framework guidelines.
+#### Purpose
+
+Ensure models are developed and used per MRM framework guidelines.
 
 ### Steps
 
@@ -89,13 +89,13 @@ The regulation encourages **proportionate application** based on the size and co
    - Include sections for intended purpose and use boundaries.
    - Document development methodology.
 
-2. Enforce development standards:[^7]
+2. Enforce development standards:
 
    - Document coding and development standards.
-   - Configure quality gates in workflows.
+   - Configure quality gates in workflows.[^7]
    - Track compliance with standards.
 
-3. Document use case and limitations:
+3. Document use case and limitations:[^8]
 
    - Clearly state intended use cases.
    - Document known limitations.
@@ -103,7 +103,9 @@ The regulation encourages **proportionate application** based on the size and co
 
 ## 4. Independent model validation (Principle 4)
 
-**Purpose:** Implement objective validation to ensure models function as intended.
+#### Purpose
+
+Implement objective validation to ensure models function as intended.
 
 ### Steps
 
@@ -113,13 +115,13 @@ The regulation encourages **proportionate application** based on the size and co
    - Ensure validator independence.
    - Define validation scope by model tier.
 
-2. Document objective assessment:[^8]
+2. Document objective assessment:[^9]
 
    - Use validation report templates.
    - Document testing methodology.
    - Provide clear conclusions.
 
-3. Implement findings and remediation workflows:[^9]
+3. Implement findings and remediation workflows:[^10]
 
    - Track validation findings.
    - Assign remediation owners.
@@ -127,7 +129,9 @@ The regulation encourages **proportionate application** based on the size and co
 
 ## 5. Model risk mitigants (Principle 5)
 
-**Purpose:** Implement controls to reduce potential adverse impact of model risks.
+#### Purpose
+
+Implement controls to reduce potential adverse impact of model risks.
 
 ### Steps
 
@@ -137,13 +141,13 @@ The regulation encourages **proportionate application** based on the size and co
    - Link controls to risks mitigated.
    - Track control effectiveness.
 
-2. Configure monitoring and alerts:[^10]
+2. Configure monitoring and alerts:[^11]
 
    - Set up ongoing monitoring.
    - Configure performance alerts.
    - Establish response procedures.
 
-3. Implement change management workflows:[^7]
+3. Implement change management workflows:[^12]
 
    - Configure model change workflows.
    - Document change approval requirements.
@@ -157,9 +161,9 @@ SS1/23 specifically addresses emerging technologies. {{< var vm.product >}} help
 
 1. Implement additional controls for complex models:
 
-   - Document enhanced validation requirements for ML models.
+   - Document enhanced validation requirements for ML models.[^13]
    - Implement interpretability documentation.
-   - Configure enhanced monitoring.[^10]
+   - Configure enhanced monitoring.[^14]
 
 2. Address dynamic adjustments and change management:
 
@@ -167,7 +171,7 @@ SS1/23 specifically addresses emerging technologies. {{< var vm.product >}} help
    - Implement change tracking for dynamic models.
    - Configure validation triggers for model updates.
 
-3. Document explainability and transparency:[^11]
+3. Document explainability and transparency:[^15]
 
    - Assess explainability requirements by model type.
    - Document interpretability approaches.
@@ -185,36 +189,49 @@ Document your proportionality assessment and how it influences your MRM framewor
 
 ## Implementation checklist
 
-- [ ] Model identification criteria documented
-- [ ] Risk classification and tiering configured
-- [ ] SMF responsibilities documented
-- [ ] Roles and permissions configured
-- [ ] Documentation templates aligned to SS1/23
-- [ ] Validation workflows established
-- [ ] Findings tracking implemented
-- [ ] Ongoing monitoring configured
-- [ ] ML/AI-specific controls documented
-- [ ] Proportionality assessment completed
+- [x]  Model identification criteria documented
+- [x]  Risk classification and tiering configured
+- [x]  SMF responsibilities documented
+- [x]  Roles and permissions configured
+- [x]  Documentation templates aligned to SS1/23
+- [x]  Validation workflows established
+- [x]  Findings tracking implemented
+- [x]  Ongoing monitoring configured
+- [x]  ML/AI-specific controls documented
+- [x]  Proportionality assessment completed
 
 <!-- FOOTNOTES -->
-[^1]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
 
-[^2]: [Work with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
+[^1]:
 
-[^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+   **Bank of England:**<br>
+   [SS1/23 – Model risk management principles for banks](https://www.bankofengland.co.uk/prudential-regulation/publication/2023/may/model-risk-management-principles-for-banks-ss)
 
-[^4]: [Work with analytics](/guide/reporting/working-with-analytics.qmd)
+[^2]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
 
-[^5]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd)
+[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
 
-[^6]: [Work with document templates](/guide/templates/working-with-document-templates.qmd)
+[^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^5]: [Working with analytics](/guide/reporting/working-with-analytics.qmd)
+
+[^6]: [Working with document templates](/guide/templates/working-with-document-templates.qmd)
 
 [^7]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
 
-[^8]: [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+[^8]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
-[^9]: [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
+[^9]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
 
-[^10]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+[^10]: [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
 
-[^11]: [LLM features](/about/overview-llm-features.qmd)
+[^11]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^12]: [Setting up workflows](/guide/workflows/setting-up-workflows.qmd)
+
+[^13]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
+
+[^14]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^15]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+
