--- a/site/about/use-cases/e-23.qmd
+++ b/site/about/use-cases/e-23.qmd
@@ -9,26 +9,19 @@ Implement E-23 Compliance using {{< var vm.product >}}.
 
 ## Overview
 
-OSFI Guideline E-23 (Enterprise-Wide Model Risk Management for Deposit-Taking Institutions) contains the most comprehensive treatment of AI among major MRM regulations, reflecting the 2027 effective date and the anticipated evolution of AI. The guideline focuses on achieving specific outcomes rather than following prescribed processes.
+OSFI Guideline E-23 (Enterprise-Wide Model Risk Management for Deposit-Taking Institutions)[^1] contains the most comprehensive treatment of AI among major MRM regulations, reflecting the 2027 effective date and the anticipated evolution of AI. By emphasizing outcomes over prescribed processes, E-23 ensures that institutions retain flexibility in how they achieve regulatory objectives.
 
-**Effective date:** May 1, 2027
-
-E-23 establishes expectations for federally regulated deposit-taking institutions in Canada to manage model risk effectively. It covers traditional MRM requirements while incorporating forward-looking considerations for AI and machine learning models.
+This guide is organized around the expectations for federally regulated deposit-taking institutions in Canada to manage model risk effectively by covering traditional model risk management (MRM)[^2] requirements while incorporating forward-looking considerations for AI and machine learning models.
 
 ## Traditional MRM requirements
 
-E-23 aligns with established MRM frameworks,[^1] requiring:
+E-23 aligns with established MRM frameworks, requiring:
 
 - **Model inventory** — Comprehensive registry of all models
 - **Development standards** — Clear documentation of model design and implementation
 - **Validation framework** — Independent validation and effective challenge
 - **Ongoing monitoring** — Performance tracking and periodic review
 - **Governance** — Board oversight and clear accountability
-
-
-::: {.callout title="External resources"}
-[OSFI Guideline E-23](https://www.osfi-bsif.gc.ca/Eng/fi-if/rg-ro/gdn-ort/gl-ld/Pages/e23.aspx)
-:::
 
 ## AI/ML-specific considerations
 
@@ -40,13 +33,13 @@ Enhanced requirements for model interpretability ensure stakeholders can underst
 
 #### Steps
 
-1. Configure documentation templates[^2] to capture explainability information.
+1. Configure documentation templates[^3] to capture explainability information.
 
-2. Run interpretability tests to generate explanations.[^3]
+2. Run interpretability tests to generate explanations.[^4]
 
-3. Document the level of explainability appropriate for model risk tier.
+3. Document the level of explainability appropriate for model risk tier.[^5]
 
-4. Establish processes for explaining decisions to affected parties.
+4. Establish processes for explaining decisions to affected parties.[^6]
 
 ### Alternative controls
 
@@ -54,13 +47,13 @@ Compensating controls for "black box" approaches where full interpretability is 
 
 #### Steps
 
-1. Document the rationale for using less interpretable models.
+1. Document the rationale for using less interpretable models.[^7]
 
-2. Implement enhanced monitoring[^4] as a compensating control.
+2. Implement enhanced monitoring[^8] as a compensating control.
 
 3. Establish human oversight requirements.
 
-4. Configure alerts for unexpected model behavior.[^5]
+4. Configure alerts for unexpected model behavior.
 
 ### Bias assessment
 
@@ -68,13 +61,13 @@ Evaluation of ethical implications and discrimination risks in AI models.
 
 #### Steps
 
-1. Run fairness and bias tests[^6] during development.
+1. Run fairness and bias tests[^9] during development.
 
-2. Document bias assessment methodology.
+2. Document bias assessment methodology.[^10]
 
 3. Establish thresholds for acceptable bias levels.
 
-4. Implement ongoing bias monitoring.
+4. Implement ongoing bias monitoring.[^11]
 
 ### Autonomous decision-making
 
@@ -86,7 +79,7 @@ Governance for self-learning capabilities and automated decisions.
 
 2. Establish human oversight requirements.
 
-3. Configure review workflows[^5] for autonomous decisions.
+3. Configure review workflows[^12] for autonomous decisions.
 
 4. Implement safeguards and intervention mechanisms.
 
@@ -96,7 +89,7 @@ Monitoring for performance degradation over time.
 
 #### Steps
 
-1. Configure ongoing monitoring[^4] for drift detection.
+1. Configure ongoing monitoring[^13] for drift detection.
 
 2. Set up alerts for performance degradation.
 
@@ -114,34 +107,53 @@ Management of continuously updating models.
 
 2. Establish change control for model updates.
 
-3. Configure validation requirements[^5] for dynamic models.
+3. Configure validation requirements[^14] for dynamic models.
 
-4. Implement rollback procedures.[^7]
+4. Implement rollback procedures.
 
 ## Implementation checklist
 
 Use this checklist to track your E-23 implementation progress:
 
-- [ ] Model inventory established with AI/ML classification
-- [ ] Documentation templates configured for AI-specific requirements
-- [ ] Validation workflows include AI/ML considerations
-- [ ] Explainability requirements documented by risk tier
-- [ ] Bias assessment processes implemented
-- [ ] Ongoing monitoring configured for drift detection
-- [ ] Human oversight controls in place
-- [ ] Dynamic learning governance established
+- [x] Model inventory established with AI/ML classification
+- [x] Documentation templates configured for AI-specific requirements
+- [x] Validation workflows include AI/ML considerations
+- [x] Explainability requirements documented by risk tier
+- [x] Bias assessment processes implemented
+- [x] Ongoing monitoring configured for drift detection
+- [x] Human oversight controls in place
+- [x] Dynamic learning governance established
+
 
 <!-- FOOTNOTES -->
-[^1]: [Model risk management overview](model-risk-management.qmd)
 
-[^2]: [Work with document templates](/guide/templates/working-with-document-templates.qmd)
+[^1]:
 
-[^3]: [LLM features](/about/overview-llm-features.qmd)
+    **Office of the Superintendent of Financial Institutions:**<br>
+    [Guideline E-23 – Model Risk Management (2027)](https://www.osfi-bsif.gc.ca/en/guidance/guidance-library/guideline-e-23-model-risk-management-2027)
 
-[^4]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+[^2]: [Model risk management](model-risk-management.qmd)
 
-[^5]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
+[^3]: [Working with document templates](/guide/templates/working-with-document-templates.qmd)
 
-[^6]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
+[^4]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
 
-[^7]: [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
+[^5]:  [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+
+[^6]:  [Setting up workflows](/guide/workflows/setting-up-workflows.qmd)
+
+[^7]:  [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+
+[^8]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^9]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
+
+[^10]:  [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+
+[^11]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^12]: [Setting up workflows](/guide/workflows/setting-up-workflows.qmd)
+
+[^13]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^14]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
