Training: Consistency & subtitle card edits

--- a/site/training/ai-governance/ai-governance-register.qmd
+++ b/site/training/ai-governance/ai-governance-register.qmd
@@ -12,27 +12,27 @@ listing:
     image-align: left
     contents:
     - path: understanding-ai-governance.html
-      title: "Understanding AI governance"
+      title: "Understanding AI Governance"
       subtitle: "Module 1"
-      description: "{{< fa check >}} Learn AI governance concepts and terminology <br> {{< fa check >}} Understand AI governance vs MRM <br> {{< fa check >}} Explore {{< var vm.product >}} platform orientation"
+      description: "{{< fa check >}} Learn AI governance concepts & terminology <br> {{< fa check >}} Understand AI governance vs MRM <br> {{< fa check >}} Explore {{< var vm.product >}} platform orientation"
       reading-time: "20"
       author: "{{< var vm.product >}}"
     - path: managing-ai-use-cases.html
-      title: "Managing AI use cases"
+      title: "Managing AI Use Cases"
       subtitle: "Module 2"
-      description: "{{< fa check >}} Work with use case inventories <br> {{< fa check >}} Conduct impact assessments <br> {{< fa check >}} Manage risk classification and lifecycle stages"
+      description: "{{< fa check >}} Work with use case inventories <br> {{< fa check >}} Conduct impact assessments <br> {{< fa check >}} Manage risk classification & lifecycle stages"
       reading-time: "30"
       author: "{{< var vm.product >}}"
     - path: configuring-ai-workflows.html
-      title: "Configuring AI workflows"
+      title: "Configuring AI Workflows"
       subtitle: "Module 3"
-      description: "{{< fa check >}} Set up intake and approval workflows <br> {{< fa check >}} Configure human oversight controls <br> {{< fa check >}} Manage escalation paths"
+      description: "{{< fa check >}} Set up intake & approval workflows <br> {{< fa check >}} Configure human oversight controls <br> {{< fa check >}} Manage escalation paths"
       reading-time: "40"
       author: "{{< var vm.product >}}"
     - path: compliance-and-oversight.html
-      title: "Compliance and oversight"
+      title: "Compliance & Oversight"
       subtitle: "Module 4"
-      description: "{{< fa check >}} Map regulatory requirements <br> {{< fa check >}} Configure dashboards and reporting <br> {{< fa check >}} Generate audit evidence"
+      description: "{{< fa check >}} Map regulatory requirements <br> {{< fa check >}} Configure dashboards & reporting <br> {{< fa check >}} Generate audit evidence"
       reading-time: "30"
       author: "{{< var vm.product >}}"
     fields: [title, subtitle, description, reading-time]
