--- a/site/training/ai-governance/understanding-ai-governance.qmd
+++ b/site/training/ai-governance/understanding-ai-governance.qmd
@@ -29,6 +29,8 @@ skip_preview: true
 
 # Learning objectives {.center}
 
+testing 123
+
 _"As someone new to **AI governance**, I want to understand key concepts, how AI governance differs from model risk management, and how {{< var vm.product >}} supports governance workflows."_
 
 ::: {.tc}
