--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -36,7 +36,7 @@ Learn how to use {{< var vm.product >}} for **AI governance** to establish organ
 ::: {.w-50-ns}
 #### <sup>Module 1</sup><br> Understanding AI Governance
 
-- Learn AI governance concepts and terminology
+- Learn AI governance concepts & terminology
 - Understand AI governance vs MRM
 - Explore {{< var vm.product >}} platform orientation
 :::
@@ -46,7 +46,7 @@ Learn how to use {{< var vm.product >}} for **AI governance** to establish organ
 
 - Work with use case inventories
 - Conduct impact assessments
-- Manage risk classification and lifecycle stages
+- Manage risk classification & lifecycle stages
 :::
 
 ::::
@@ -56,16 +56,16 @@ Learn how to use {{< var vm.product >}} for **AI governance** to establish organ
 ::: {.w-50-ns}
 #### <sup>Module 3</sup><br> Configuring AI Workflows
 
-- Set up intake and approval workflows
+- Set up intake & approval workflows
 - Configure human oversight controls
 - Manage escalation paths
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Compliance and Oversight
+#### <sup>Module 4</sup><br> Compliance & Oversight
 
 - Map regulatory requirements
-- Configure dashboards and reporting
+- Configure dashboards & reporting
 - Generate audit evidence
 :::
 
