Embed animated GIF in overview topic & tweak mermaid diagram

--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -38,17 +38,13 @@ listing:
 
 ### How does the attestation process work?
 
-
-
 Attestation on the {{< var validmind.platform >}} begins at the start of the attestation period after the process has been set up initially. The platform captures a snapshot of each model and its artifacts, preserving the state at that point in time. Changes made after the process starts do not affect the historical record.
-
-Attestation participants access their tasks via **{{< fa inbox >}} My Inbox** in the left sidebar. Tasks appear under the **Tasks** tab with the current attestation status, also known as _attestation instances_.
 
 Responsibilities for the attestation process are shared:
 
 ::: {.tc}
 ```{mermaid}
-graph LR
+graph TD
     subgraph Submitter
         A["**Not Started**"] --> B["**In Progress**"]
         B --> C["**Ready for Review**"]
@@ -66,6 +62,12 @@ graph LR
 
 [The attestation process — Submitter, reviewer, and approver responsibilities]{.silver .small}
 :::
+
+::: {.column-margin .mt5}
+![Sample attestations in progress](attestation-q1-attestation-progress.gif){fig-alt="Attestation progress" .screenshot}
+:::
+
+Attestation participants access their tasks via **{{< fa inbox >}} My Inbox** in the left sidebar. Tasks appear under the **Tasks** tab with the current attestation status, also known as _attestation instances_.
 
 The submitter is responsible for completing the questionnaire and addressing change requests. The reviewer is responsible for reviewing the questionnaire and requesting any necessary changes. The approver is responsible for signing off on the questionnaire.
 
