Rename topic to match short title

--- a/site/about/library-and-platform.qmd
+++ b/site/about/library-and-platform.qmd
@@ -2,7 +2,7 @@
 title: "{{< var validmind.developer >}} and {{< var validmind.platform >}}"
 date: last-modified
 listing:
-  - id: product-features
+  - id: library-and-platform
     type: grid
     max-description-length: 250
     grid-columns: 2
@@ -46,9 +46,9 @@ The *{{< var validmind.platform >}}* is an easy-to-use web-based interface that 
 {{< include /about/glossary/key_concepts/_key-concepts.qmd >}}
 :::
 
-## Feature highlights
+## Product highlights
 
-:::{#product-features}
+:::{#library-and-platform}
 :::
 
 <!-- ## How do I get started? 
