--- a/site/about/use-cases/eu-ai-act.qmd
+++ b/site/about/use-cases/eu-ai-act.qmd
@@ -15,11 +15,11 @@ The EU AI Act[^1] establishes requirements across six key areas for high-risk AI
 
 The EU AI Act categorizes AI systems by risk level:
 
-- **Prohibited** — AI systems that pose unacceptable risks (e.g., social scoring, real-time biometric identification in public spaces).
+- **Prohibited** — AI systems that pose unacceptable risks, such as social scoring or real-time biometric identification in public spaces.
 
-- **High-risk** — AI systems in critical areas requiring strict compliance (e.g., employment, credit scoring, law enforcement).
+- **High-risk** — AI systems in critical areas requiring strict compliance, such as employment, credit scoring, or law enforcement.
 
-- **Limited risk** — AI systems with transparency obligations (e.g., chatbots, emotion recognition).
+- **Limited risk** — AI systems with transparency obligations, such as chatbots or emotion recognition.
 
 - **Minimal risk** — AI systems with no specific requirements.
 
