--- a/site/about/use-cases/ss1-23.qmd
+++ b/site/about/use-cases/ss1-23.qmd
@@ -39,7 +39,7 @@ Establish a structured approach to identify and categorize models within the MRM
 
 2. Configure risk classification and tiering fields:[^2]
 
-   - Set up model tier fields (e.g., Tier 1, 2, 3).
+   - Set up model tier fields, such as Tier 1, Tier 2, and Tier 3.
    - Add risk classification categories.
    - Configure validation based on tier.
 
