--- a/site/about/overview.qmd
+++ b/site/about/overview.qmd
@@ -28,9 +28,9 @@ aliases:
   - /about.html
 ---
 
-{{< var vm.product >}} is the system of record for AI governance. It models the full lifecycle of AI systems, models, use cases, and tools, along with their dependencies, and automates the governance and documentation you build on top.
+{{< var vm.product >}} is the system of record for AI governance. You use {{< var vm.product >}} to model the full lifecycle of AI systems, models, use cases, and tools, along with their dependencies, and automates the governance and documentation you build on top.
 
-The platform is flexible by design and lets you define your own inventory hierarchy, dependencies, and governance rules, powered by {{< var vm.product >}}’s documentation automation, workflows, and analytics.
+Flexible by design, the {{< var vm.platform >}} lets you define your own inventory hierarchy, dependencies, and governance rules, powered by {{< var vm.product >}}’s documentation automation, workflows, and analytics.
 
 ## What do I use {{< var vm.product >}} for?
 
