Add collapsible section, hint about group filtering

--- a/site/guide/attestation/_configure-attestations.qmd
+++ b/site/guide/attestation/_configure-attestations.qmd
@@ -80,11 +80,25 @@ Define which models are included in the attestation process. By default, all mod
 
 a. Under Inventory Scope, click **{{< fa plus >}} Add Rule** to add a filter condition.
 
-{{< include /guide/shared/_select-your-filters.qmd >}}
+::: {.callout-button .pl4 .nt2}
+::: {.callout collapse="true" appearance="minimal"}
+### How do I create effective filters?
+
+{{< include /guide/shared/_work-with-filters.qmd >}}
+:::
+:::
 
 b. Click **Save**.
 
 c. Optional: Click **See Models** to preview which models match your filter criteria.
+
+::: {.embed-tip}
+### How do I filter for groups? 
+
+To filter for groups, you first need to define these user groups in your organization's settings. Then filter using the `Group` field in the inventory scope.
+
+![Filtering for user groups](/guide/attestation/attestations-inventory-scope.png){width=100% fig-alt="A screenshot of the inventory scope editor showing the process of adding a filter condition to filter for Group A, Group B, and Group C." .screenshot}
+:::
 
 ### 4. Add attestation fields
 
