Documentation - Attestations enhancements (#1090)
* Initial set of docs changes for improved attestation process

* Updated task topics and edits

* Minor edits

* Improve owner + group explanations

* Remove column experiment

* Edits

* Update prerequisites

* Add animated GIF

* Embed animated GIF in overview topic & tweak mermaid diagram

* Add collapsible section, hint about group filtering

--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -4,13 +4,15 @@ date: last-modified
 listing:
   - id: attestation-listing
     type: grid
+    grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents:
-      - set-up-attestations.qmd
-      - complete-attestation-questionnaires.qmd
-      - review-attestation-questionnaires.qmd
+      - manage-attestations.qmd
+      - submit-attestations.qmd
+      - review-attestations.qmd
+      - approve-attestations.qmd
 ---
 
 {{< include /guide/attestation/_attestations.qmd >}}
@@ -24,8 +26,9 @@ listing:
 - [x] If applicable, model artifacts have been documented.[^2]
 - [x] You are assigned a role with sufficient permissions to perform attestation tasks:[^3]
    - [{{< fa hand >}} Customer Admin]{.bubble} — Sets up attestations
-   - [Model owner]{.bubble} — Completes attestation questionnaires
-   - [{{< fa circle-check >}} Validator]{.bubble}  — Reviews and signs off on attestation questionnaires
+   - [Submitter]{.bubble} — Stakeholder who submits attestation questionnaires
+   - [Reviewer]{.bubble} — Organizational role that reviews attestation questionnaires
+   - [Approver]{.bubble} — Organizational role that approves attestation questionnaires
 
 :::
 
@@ -37,41 +40,57 @@ listing:
 
 Attestation on the {{< var validmind.platform >}} begins at the start of the attestation period after the process has been set up initially. The platform captures a snapshot of each model and its artifacts, preserving the state at that point in time. Changes made after the process starts do not affect the historical record.
 
-Model owners and validators each see a banner on their dashboard when an attestation requires action. The banner links directly to their active respective attestation tasks, also known as _attestation instances_:
-
-![Dashboard prompt for attestations](attestation-banner.png){width="80%" fig-alt="Attestation prompt with a link to the attestation labelled 'Open Attestations'" .screenshot}
-
 Responsibilities for the attestation process are shared:
 
 ::: {.tc}
 ```{mermaid}
-graph LR
-    subgraph Model Owner
+graph TD
+    subgraph Submitter
         A["**Not Started**"] --> B["**In Progress**"]
         B --> C["**Ready for Review**"]
     end
     
-    subgraph Validator
+    subgraph Reviewer
         C --> D["**Reviewed**"]
-        D --> E["**Signed Off**"]
         D -.-> B
+    end
+    
+    subgraph Approver
+        D --> E["**Signed Off**"]
     end
 ```
 
-[The attestation process — Model owner and validator responsibilities]{.silver .small}
+[The attestation process — Submitter, reviewer, and approver responsibilities]{.silver .small}
 :::
 
-::: {.column-margin .callout title="Attestation is collaborative"}
-A validator can request changes from the model owner by rejecting the attestation questionnaire. 
-
-___
-
-The platform maintains a history of all status changes and notes.
+::: {.column-margin .mt5}
+![Sample attestations in progress](attestation-q1-attestation-progress.gif){fig-alt="Attestation progress" .screenshot}
 :::
 
-The model owner is responsible for completing the questionnaire and addressing change requests from their reviewer. In turn, the validator is responsible for reviewing the questionnaire, requesting any necessary changes, and signing off.
+Attestation participants access their tasks via **{{< fa inbox >}} My Inbox** in the left sidebar. Tasks appear under the **Tasks** tab with the current attestation status, also known as _attestation instances_.
+
+The submitter is responsible for completing the questionnaire and addressing change requests. The reviewer is responsible for reviewing the questionnaire and requesting any necessary changes. The approver is responsible for signing off on the questionnaire.
 
 Plan your attestation periods ahead of time to ensure they can be completed on time. The start date must be today or a future date, and you cannot set a date in the past to trigger attestation retroactively.
+
+### How are attestation submissions organized?
+
+Attestation submissions are organized by owner AND group. This structure supports organizations where:
+
+- Model owners may own models across multiple groups, such as Fraud and Know-Your-Customer (KYC).
+- Each group has its own validation and governance team
+- Reviewers and approvers are roles scoped to specific groups
+
+::: {.callout title="Example scenario"}
+Steven owns 10 models: 4 in the Fraud group and 6 in the KYC group. Emma is the Governance Lead for Fraud, and Fernanda is the Governance Lead for KYC.
+
+If attestations were organized by owner alone, neither Emma nor Fernanda would have permissions to see all of Steven's models. With owner+group organization:
+
+- Steven submits Attestation #1 for his 4 Fraud models → Emma approves
+- Steven submits Attestation #2 for his 6 KYC models → Fernanda approves
+
+This approach ensures 100% accountability per group, where Emma approves all Fraud models and Fernanda approves all KYC models. If Fraud has two co-leads (Emma and Andres), either can approve.
+:::
 
 ## How do I create meaningful attestation questionnaires?
 
