Minor addition to E-23 guide

--- a/site/about/use-cases/e-23.qmd
+++ b/site/about/use-cases/e-23.qmd
@@ -25,7 +25,7 @@ E-23 aligns with established MRM frameworks, requiring:
 
 ## AI/ML-specific considerations
 
-E-23 introduces enhanced requirements for AI and ML models. {{< var vm.product >}} helps you address these considerations:
+E-23 introduces enhanced requirements for AI and ML models in addition to traditional MRM requirements. {{< var vm.product >}} helps you address these considerations:
 
 ### Explainability
 
